python/test-data/testTypesSet1.err
Traceback (most recent call last):
  File "test-data/testTypesSet1.py", line 7, in <module>
    appendSomething(l)
  File "test-data/testTypesSet1.py", line 4, in appendSomething
    l.add("foo")
WyppTypeError: got value of wrong type

context: appendSomething(l: set[int]) -> None
                            ^^^^^^^^
declared at: test-data/testTypesSet1.py:3
caused by: test-data/testTypesSet1.py:7
  | appendSomething(l)

given:    'foo'
expected: value of type int

context: add(self: Self, other: int) -> None
                                ^^^
declared at: test-data/testTypesSet1.py:3
caused by: test-data/testTypesSet1.py:4
  |     l.add("foo")
